updating loop on HITL qna

--- a/openshift_solution/HITL_qna_review.ipynb
+++ b/openshift_solution/HITL_qna_review.ipynb
@@ -43,11 +43,129 @@
     "\n",
     "create_and_save_file(filename, text_content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96d45758-f916-4aa2-9d72-f783d6550688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "from botocore.exceptions import ClientError\n",
+    "import time\n",
+    "import logging\n",
+    "import sys\n",
+    "\n",
+    "# Configure logging (optional, but helpful for debugging)\n",
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
+    "def check_s3_file_exists_head(bucket_name: str, object_key: str) -> bool:\n",
+    "    \"\"\"\n",
+    "    Checks if an object exists in an S3 bucket using head_object.\n",
+    "\n",
+    "    Args:\n",
+    "        bucket_name: The name of the S3 bucket.\n",
+    "        object_key: The key (full path including filename) of the object.\n",
+    "\n",
+    "    Returns:\n",
+    "        True if the object exists, False otherwise. Also returns False\n",
+    "        on non-404 errors to allow retries, logging the specific error.\n",
+    "    \"\"\"\n",
+    "    # Ensure you have AWS credentials configured (e.g., via environment variables,\n",
+    "    # AWS credentials file, or IAM role)\n",
+    "    try:\n",
+    "            # Create an S3 client\n",
+    "        s3_client = boto3.client('s3',\n",
+    "                              endpoint_url='http://minio.summit-project-user10.svc.cluster.local:9000',\n",
+    "                              aws_access_key_id='minio',\n",
+    "                              aws_secret_access_key='minio123')\n",
+    "        s3_client.head_object(Bucket=bucket_name, Key=object_key)\n",
+    "        return True # Found the object\n",
+    "    except ClientError as e:\n",
+    "        error_code = e.response.get('Error', {}).get('Code')\n",
+    "        if error_code == '404':\n",
+    "            # Object Not Found - this is expected during polling\n",
+    "            return False\n",
+    "        else:\n",
+    "            # Handle other potential errors (e.g., permissions, throttling, bucket not found)\n",
+    "            # Log the error but return False to potentially allow retries\n",
+    "            # depending on the polling logic's max_attempts.\n",
+    "            logger.error(f\"Error checking object '{object_key}' in bucket '{bucket_name}': {e}. Error Code: {error_code}\")\n",
+    "            return False\n",
+    "    except Exception as e:\n",
+    "        # Catch any other unexpected exceptions\n",
+    "        logger.error(f\"A general error occurred checking object '{object_key}': {e}\")\n",
+    "        return False # Return False to allow potential retries\n",
+    "\n",
+    "def wait_for_s3_file(bucket_name: str, object_key: str, poll_interval_seconds: int = 10, max_attempts: int | None = None):\n",
+    "    \"\"\"\n",
+    "    Polls an S3 bucket until a specific object key is found.\n",
+    "\n",
+    "    Args:\n",
+    "        bucket_name: The name of the S3 bucket.\n",
+    "        object_key: The key (full path including filename) of the object to wait for.\n",
+    "        poll_interval_seconds: The number of seconds to wait between checks.\n",
+    "        max_attempts: Optional. The maximum number of times to check before giving up.\n",
+    "                      If None, it will loop indefinitely until the file is found or\n",
+    "                      an unrecoverable error occurs.\n",
+    "    \"\"\"\n",
+    "    logger.info(f\"Waiting for object '{object_key}' to appear in bucket '{bucket_name}'...\")\n",
+    "    attempts = 0\n",
+    "    while True:\n",
+    "        attempts += 1\n",
+    "        logger.info(f\"Checking for '{object_key}'... (Attempt {attempts})\")\n",
+    "        found = check_s3_file_exists_head(bucket_name, object_key)\n",
+    "\n",
+    "        if found:\n",
+    "            logger.info(f\"Success! Object '{object_key}' found in bucket '{bucket_name}'.\")\n",
+    "            break # Exit the loop\n",
+    "\n",
+    "        # Check if max_attempts limit is reached\n",
+    "        if max_attempts is not None and attempts >= max_attempts:\n",
+    "            logger.warning(f\"Maximum attempts ({max_attempts}) reached. Object '{object_key}' not found.\")\n",
+    "            # Exit the script or function indicating failure\n",
+    "            # sys.exit(1) # Uncomment this line to exit the entire script with an error code\n",
+    "            return # Or simply return from the function\n",
+    "\n",
+    "        # File not found yet, wait before the next attempt\n",
+    "        logger.info(f\"Object not found yet. Waiting {poll_interval_seconds} seconds before retrying...\")\n",
+    "        time.sleep(poll_interval_seconds)\n",
+    "\n",
+    "# --- Example Usage ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    # --- Configuration ---\n",
+    "    target_bucket = 'data-files-bucket'  # <--- !! Replace with your bucket name !!\n",
+    "    target_file_key = 'qna-yaml-approved.md' # <--- !! Replace with the specific file key !!\n",
+    "    check_interval = 10  # Check every 10 seconds\n",
+    "    # Set max_attempts to None to wait forever, or set a number (e.g., 60 for ~10 minutes)\n",
+    "    maximum_checks = 60 # Example: Try 60 times (60 * 10s = 600s = 10 minutes)\n",
+    "\n",
+    "    # --- Start Waiting ---\n",
+    "    try:\n",
+    "        wait_for_s3_file(\n",
+    "            bucket_name=target_bucket,\n",
+    "            object_key=target_file_key,\n",
+    "            poll_interval_seconds=check_interval,\n",
+    "            max_attempts=maximum_checks\n",
+    "        )\n",
+    "        logger.info(\"Polling finished successfully.\")\n",
+    "        # Add any code here that should run *after* the file is found\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"An unexpected error occurred during the waiting process: {e}\")\n",
+    "        sys.exit(1) # Exit script with error if something unexpected happens\n",
+    "\n",
+    "    # Script execution will end here naturally after the loop in wait_for_s3_file finishes\n",
+    "    # or if sys.exit() was called.\n",
+    "    print(\"Script finished.\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.11",
    "language": "python",
    "name": "python3"
   },
@@ -61,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   },
   "papermill": {
    "default_parameters": {},
