Updates to qna review

--- a/openshift_solution/HITL_qna_review.ipynb
+++ b/openshift_solution/HITL_qna_review.ipynb
@@ -137,7 +137,7 @@
     "if __name__ == \"__main__\":\n",
     "    # --- Configuration ---\n",
     "    target_bucket = 'data-files-bucket'  # <--- !! Replace with your bucket name !!\n",
-    "    target_file_key = 'qna-yaml-approved.md' # <--- !! Replace with the specific file key !!\n",
+    "    target_file_key = 'qna-approved.yaml' # <--- !! Replace with the specific file key !!\n",
     "    check_interval = 10  # Check every 10 seconds\n",
     "    # Set max_attempts to None to wait forever, or set a number (e.g., 60 for ~10 minutes)\n",
     "    maximum_checks = 60 # Example: Try 60 times (60 * 10s = 600s = 10 minutes)\n",
