--- a/openshift_solution/HITL_qna_review.ipynb
+++ b/openshift_solution/HITL_qna_review.ipynb
@@ -78,7 +78,7 @@
     "    try:\n",
     "            # Create an S3 client\n",
     "        s3_client = boto3.client('s3',\n",
-    "                              endpoint_url='http://minio.summit-project-user10.svc.cluster.local:9000',\n",
+    "                              endpoint_url=os.environ.get('minio-url'),\n",
     "                              aws_access_key_id='minio',\n",
     "                              aws_secret_access_key='minio123')\n",
     "        s3_client.head_object(Bucket=bucket_name, Key=object_key)\n",
