fixed import issue and renamed pipeline

--- a/openshift_solution/HITL_qna_review.ipynb
+++ b/openshift_solution/HITL_qna_review.ipynb
@@ -18,6 +18,7 @@
      "start_time": "2025-03-18T20:39:39.792924",
      "status": "completed"
     },
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -56,6 +57,7 @@
     "import time\n",
     "import logging\n",
     "import sys\n",
+    "import os\n",
     "\n",
     "# Configure logging (optional, but helpful for debugging)\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
